--- a/src/styles/misc/general.scss
+++ b/src/styles/misc/general.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .display-none {
-    display: none !important;
+    display: none;
 }
 
 /*******************************/
